usser loaction amd address set

--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -12,17 +12,17 @@
 
     <com.smarteist.autoimageslider.SliderLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_marginBottom="10dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="5dp"
         android:id="@+id/FoodAppimageSlider"/>
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="155dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="2dp"
         android:columnCount="2"
         android:columnOrderPreserved="true"
-        android:padding="8dp"
+        android:padding="2dp"
         android:rowCount="2">
 
         <androidx.cardview.widget.CardView
@@ -196,7 +196,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Recommended for you"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:textSize="14sp" />
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -212,7 +212,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="View All"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:textSize="12sp"
                     android:layout_marginRight="10dp"
                     android:layout_alignParentRight="true"
@@ -225,410 +225,21 @@
 
     </LinearLayout>
 
-   <!-- <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">-->
+
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_numbers"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="190dp"
             android:orientation="horizontal"
             android:scrollbars="vertical|horizontal"/>
-
-
-
-    <!--    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_margin="5dp"
-            android:orientation="horizontal">
-
-
-
-           <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:orientation="vertical">
-
-                // this is your first layout to put the big image
-                // use src or backgroud image as per requirement
-
-                <LinearLayout
-                    android:background="@drawable/burgerbackground"
-                    android:layout_width="280dp"
-                    android:layout_height="100dp"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
-
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_margin="10dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Burger King"
-                            android:textSize="15sp"
-                            android:textStyle="bold"
-                            android:layout_alignParentLeft="true"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cuisine"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:orientation="vertical"
-                        android:layout_margin="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Opening Time"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-
-                            android:text="9:00 am - 10:00 pm"/>
-                    </LinearLayout>
-
-                </RelativeLayout>
-                // this is your bottom layout
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                </LinearLayout>
-            </LinearLayout>
-
-            // This is the imageview which overlay the first LinearLayout
-
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:adjustViewBounds="true"
-                android:layout_margin="10dp"
-                android:src="@drawable/foodexpress_icon" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-            </LinearLayout>
-        </FrameLayout>-->
-
-           <!-- <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:orientation="vertical">
-
-                    // this is your first layout to put the big image
-                    // use src or backgroud image as per requirement
-
-                    <LinearLayout
-                        android:background="@drawable/burgerbackground"
-                        android:layout_width="280dp"
-                        android:layout_height="100dp"
-                        android:orientation="vertical"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_margin="10dp"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Burger King"
-                                android:textSize="15sp"
-                                android:textStyle="bold"
-                                android:layout_alignParentLeft="true"
-                                />
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Cuisine"
-                                />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:orientation="vertical"
-                            android:layout_margin="10dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Opening Time"
-                                />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-
-                                android:text="9:00 am - 10:00 pm"/>
-                        </LinearLayout>
-
-                    </RelativeLayout>
-                    // this is your bottom layout
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                // This is the imageview which overlay the first LinearLayout
-
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:adjustViewBounds="true"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/foodexpress_icon" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-
-                </LinearLayout>
-            </FrameLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:orientation="vertical">
-
-                    // this is your first layout to put the big image
-                    // use src or backgroud image as per requirement
-
-                    <LinearLayout
-                        android:background="@drawable/burgerbackground"
-                        android:layout_width="280dp"
-                        android:layout_height="100dp"
-                        android:orientation="vertical"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_margin="10dp"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Burger King"
-                                android:textSize="15sp"
-                                android:textStyle="bold"
-                                android:layout_alignParentLeft="true"
-                                />
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Cuisine"
-                                />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:orientation="vertical"
-                            android:layout_margin="10dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Opening Time"
-                                />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-
-                                android:text="9:00 am - 10:00 pm"/>
-                        </LinearLayout>
-
-                    </RelativeLayout>
-                    // this is your bottom layout
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                // This is the imageview which overlay the first LinearLayout
-
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:adjustViewBounds="true"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/foodexpress_icon" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-
-                </LinearLayout>
-            </FrameLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:orientation="vertical">
-
-                    // this is your first layout to put the big image
-                    // use src or backgroud image as per requirement
-
-                    <LinearLayout
-                        android:background="@drawable/burgerbackground"
-                        android:layout_width="280dp"
-                        android:layout_height="100dp"
-                        android:orientation="vertical"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_margin="10dp"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Burger King"
-                                android:textSize="15sp"
-                                android:textStyle="bold"
-                                android:layout_alignParentLeft="true"
-                                />
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Cuisine"
-                                />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:orientation="vertical"
-                            android:layout_margin="10dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Opening Time"
-                                />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-
-                                android:text="9:00 am - 10:00 pm"/>
-                        </LinearLayout>
-
-                    </RelativeLayout>
-                    // this is your bottom layout
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                // This is the imageview which overlay the first LinearLayout
-
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:adjustViewBounds="true"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/foodexpress_icon" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-
-                </LinearLayout>
-            </FrameLayout>-->
-        <!--</LinearLayout>-->
-   <!-- </HorizontalScrollView>-->
-
-
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_show_current_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Order status"/>
 
 
 
