--- a/app/src/main/res/layout/activity_tab_fragment_nearby.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_nearby.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/layout_nearby">
     <ProgressBar
         android:id="@+id/pv_restaurant_menu"
         android:layout_width="42dp"
