--- a/app/src/main/res/layout/activity_web_view_class.xml
+++ b/app/src/main/res/layout/activity_web_view_class.xml
@@ -2,7 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        app:title="PPEEP Store"
+        android:gravity="center"
+        android:theme="@style/AppTheme2"
+        android:id="@+id/foodtoolbar"
+
+        android:background="@color/colorPrimary">
+    </androidx.appcompat.widget.Toolbar>
 
     <WebView
         android:id="@+id/webview1"
