--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -46,11 +46,13 @@
             android:elevation="40dp"
             app:bubbleTab_circleColor="#ffcc00"
             app:bubbleTab_circleRatio="1.25"
+            android:scaleType="fitCenter"
+
 
             app:bubbleTab_image0="@drawable/homeicon2"
 
 
-            app:bubbleTab_image1="@drawable/grouptesticon"
+            app:bubbleTab_image1="@drawable/grouptest3"
 
             app:bubbleTab_image2="@drawable/notificationicon"
 
