--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -92,7 +92,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="P-PEEP FOOD"
+                    android:text="P-PEEP Store"
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
@@ -108,6 +108,7 @@
 
         </com.google.android.material.card.MaterialCardView>
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/ppeepRideCardView"
             android:layout_width="120dp"
             android:layout_height="130dp"
             android:backgroundTint="#63AAE2"
@@ -135,7 +136,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="P-PEEP FOOD"
+                    android:text="P-PEEP Ride"
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
